@@ -1,8 +1,16 @@
+2008-12-11  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclZlib.c (ConvertError): Factor out code to turn zlib
+	errors into Tcl errors.
+
+	* doc/zlib.n: Added a start at the documentation. Still very rough.
+
 2008-12-11  Jan Nijtmans  <nijtmans@users.sf.net>
 
-	* win/Makefile.in: fix Windows build (mingw) for TIP #234 implementation
-	  (additionally, first make sure that zlib is available, and rename the
-	   standard zdll.lib to libz.a, but at least this works so far.)
+	* win/Makefile.in: fix Windows build (mingw) for TIP #234
+	implementation (additionally, first make sure that zlib is available,
+	and rename the standard zdll.lib to libz.a, but at least this works so
+	far).
 
 2008-12-11  Donal K. Fellows  <dkf@users.sf.net>
 
